--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <div class="img">
         <div class="js">
         <div class="header container d-flex align-items-center justify-content-between ">
-          <img src="./logo.png" alt="" />
+          <img src="./images/logo.png" alt="" />
           <nav class="d-none d-lg-flex">
             <a href="">HOME</a>
             <a href="">ABOUT</a>
@@ -79,8 +79,8 @@
           </div>
         </div>
         <div class="right d-flex align-items-start">
-          <img class="img1" src="./about2.jpg" alt="">
-          <img class="img2" src="./about.jpg" alt="">
+          <img class="img1" src="./images/about2.jpg" alt="">
+          <img class="img2" src="./images/about.jpg" alt="">
         </div>
       </div>
     </section>
@@ -88,21 +88,21 @@
       <div class="container">
         <div class="row">
           <div div class="firstt col-md-4 col-12">
-            <img src="./Screenshot 2026-02-07 140525.png" alt="">
+            <img src="./images/Screenshot 2026-02-07 140525.png" alt="">
             <div class="first d-flex flex-column">
             <h5>Cuts</h5>
             <p>Cuts ut nisl quam nestibulum drana odio elementum sceisue the can golden varius the dis monte.</p>
             </div>
           </div>
           <div class="secondd col-md-4 col-12">
-            <img src="./Screenshot 2026-02-07 141419.png" alt="">
+            <img src="./images/Screenshot 2026-02-07 141419.png" alt="">
             <div class="second d-flex flex-column">
             <h5>Fades</h5>
             <p>Fades ut nisl quam nestibulum drana odio elementum sceisue the can golden varius the dis monte.</p>
             </div>
           </div>
           <div class="thirdd col-md-4 col-12">
-            <img src="./Screenshot 2026-02-07 141445.png" alt="">
+            <img src="./images/Screenshot 2026-02-07 141445.png" alt="">
             <div class="third d-flex flex-column">
             <h5>Shaves</h5>
             <p>Shaves ut nisl quam nestibulum drana odio elementum sceisue the can golden varius the dis monte.</p>
@@ -115,14 +115,14 @@
       <div class="container">
         <div class="row">
           <div class="left col-md-5">
-            <img src="./about2.jpg" alt="">
+            <img src="./images/about2.jpg" alt="">
           </div>
           <div class="right col-md-7">
             <p class="para">17 Year of Experience</p>
             <h1>Making people look awesome since 2006</h1>
             <p class="text">Come experience a unique and edgy barbershop for all your hair and beard needs. Vulputate ons amet ravida haretra nuam the drana miss uctus enec accumsan justo aliquam sit amet auctor orci done vitae risus duise nunc sapien.</p>
             <div class="bottom d-flex">
-              <img src="./signature.svg">
+              <img src="./images/signature.svg">
               <div class="sign">
               <p class="top">Barber, Founder</p>
               <p class="bot">Harold Brown</p>
