--- a/index.html
+++ b/index.html
@@ -28,33 +28,41 @@
     <section id="sec1">
       <div class="img">
         <div class="js">
-        <div class="header container d-flex align-items-center justify-content-between ">
-          <img src="./images/logo.png" alt="" />
-          <nav class="d-none d-lg-flex">
-            <a href="">HOME</a>
-            <a href="">ABOUT</a>
-            <a href="">SERVICES</a>
-            <a href="">PRICING</a>
-            <a href="">PORTFOLIO</a>
-            <a href="">TEAM</a>
-            <a href="">BLOG</a>
-            <a href="">CONTACT</a>
-          </nav>
-          <i class="fa-solid fa-bars fa-lg logoRes d-sm-flex d-lg-none text-white"></i>
+          <div
+            class="header container d-flex align-items-center justify-content-between"
+          >
+            <img src="./images/logo.png" alt="" />
+            <nav class="d-none d-lg-flex">
+              <a href="#sec1">HOME</a>
+              <a href="#sec2">ABOUT</a>
+              <a href="">SERVICES</a>
+              <a href="">PRICING</a>
+              <a href="">PORTFOLIO</a>
+              <a href="">TEAM</a>
+              <a href="">BLOG</a>
+              <a href="">CONTACT</a>
+            </nav>
+            <i
+              class="fa-solid fa-bars fa-lg logoRes d-sm-flex d-lg-none text-white"
+            ></i>
+          </div>
         </div>
-        </div>
-        <div class="hero container d-flex justify-content-center align-items-center flex-column">
+        <div
+          class="hero container d-flex justify-content-center align-items-center flex-column"
+        >
           <h5 class="text-white">Stay sharp, Look good</h5>
           <h1 class="text-white">
             NYC'S FAVOURITE
-            <br>
+            <br />
             BARBER SHOP.
           </h1>
-          <h5 class="text-white">Broadway St, NYC. Appointment: 855 100 4444</h5>
+          <h5 class="text-white">
+            Broadway St, NYC. Appointment: 855 100 4444
+          </h5>
           <button>BOOK APPOINTMENT</button>
         </div>
         <a class="arrowDown d-flex justify-content-center align-items-center">
-        <i class="fa-solid fa-arrow-down "></i>
+          <i class="fa-solid fa-arrow-down"></i>
         </a>
       </div>
     </section>
@@ -63,24 +71,39 @@
         <div class="left">
           <p class="head">Since 2006</p>
           <h1>Perukar Barber Shop</h1>
-          <p class="paragraph">Come experience a unique and edgy barbershop for all your hair and beard needs. ravida haretra nuam enim mi obortis eset uctus enec accumsan eu justo alisuame amet auctor orci donec vitae vehicula risus.</p>
-          <p class="paragraph">Barber utate ons amet ravida haretra nuam the duru miss uctus the drana accumsan justo aliquam sit amet auctor orci done vitae risus duise nisan sapien silver on the accumsan id mauris apien.</p>
+          <p class="paragraph">
+            Come experience a unique and edgy barbershop for all your hair and
+            beard needs. ravida haretra nuam enim mi obortis eset uctus enec
+            accumsan eu justo alisuame amet auctor orci donec vitae vehicula
+            risus.
+          </p>
+          <p class="paragraph">
+            Barber utate ons amet ravida haretra nuam the duru miss uctus the
+            drana accumsan justo aliquam sit amet auctor orci done vitae risus
+            duise nisan sapien silver on the accumsan id mauris apien.
+          </p>
           <div class="d-flex">
-          <i class="fa-solid fa-check pt-4px" style="color: #91765a;"></i>
-          <p class="fs-15 margin-15 color-dark">We're professional and certified barbers</p>
+            <i class="fa-solid fa-check pt-4px" style="color: #91765a"></i>
+            <p class="fs-15 margin-15 color-dark">
+              We're professional and certified barbers
+            </p>
           </div>
           <div class="d-flex">
-            <i class="fa-solid fa-check pt-4px" style="color: #91765a;"></i>
-            <p class="fs-15 margin-15 color-dark">We use quality products to make you look perfect</p>
+            <i class="fa-solid fa-check pt-4px" style="color: #91765a"></i>
+            <p class="fs-15 margin-15 color-dark">
+              We use quality products to make you look perfect
+            </p>
           </div>
           <div class="d-flex">
-            <i class="fa-solid fa-check pt-4px" style="color: #91765a;"></i>
-            <p class="fs-15 margin-15 color-dark">We care about our customers satisfaction</p>
+            <i class="fa-solid fa-check pt-4px" style="color: #91765a"></i>
+            <p class="fs-15 margin-15 color-dark">
+              We care about our customers satisfaction
+            </p>
           </div>
         </div>
         <div class="right d-flex align-items-start">
-          <img class="img1" src="./images/about2.jpg" alt="">
-          <img class="img2" src="./images/about.jpg" alt="">
+          <img class="img1" src="./images/about2.jpg" alt="" />
+          <img class="img2" src="./images/about.jpg" alt="" />
         </div>
       </div>
     </section>
@@ -88,24 +111,33 @@
       <div class="container">
         <div class="row">
           <div div class="firstt col-md-4 col-12">
-            <img src="./images/Screenshot 2026-02-07 140525.png" alt="">
+            <img src="./images/Screenshot 2026-02-07 140525.png" alt="" />
             <div class="first d-flex flex-column">
-            <h5>Cuts</h5>
-            <p>Cuts ut nisl quam nestibulum drana odio elementum sceisue the can golden varius the dis monte.</p>
+              <h5>Cuts</h5>
+              <p>
+                Cuts ut nisl quam nestibulum drana odio elementum sceisue the
+                can golden varius the dis monte.
+              </p>
             </div>
           </div>
           <div class="secondd col-md-4 col-12">
-            <img src="./images/Screenshot 2026-02-07 141419.png" alt="">
+            <img src="./images/Screenshot 2026-02-07 141419.png" alt="" />
             <div class="second d-flex flex-column">
-            <h5>Fades</h5>
-            <p>Fades ut nisl quam nestibulum drana odio elementum sceisue the can golden varius the dis monte.</p>
+              <h5>Fades</h5>
+              <p>
+                Fades ut nisl quam nestibulum drana odio elementum sceisue the
+                can golden varius the dis monte.
+              </p>
             </div>
           </div>
           <div class="thirdd col-md-4 col-12">
-            <img src="./images/Screenshot 2026-02-07 141445.png" alt="">
+            <img src="./images/Screenshot 2026-02-07 141445.png" alt="" />
             <div class="third d-flex flex-column">
-            <h5>Shaves</h5>
-            <p>Shaves ut nisl quam nestibulum drana odio elementum sceisue the can golden varius the dis monte.</p>
+              <h5>Shaves</h5>
+              <p>
+                Shaves ut nisl quam nestibulum drana odio elementum sceisue the
+                can golden varius the dis monte.
+              </p>
             </div>
           </div>
         </div>
@@ -115,19 +147,149 @@
       <div class="container">
         <div class="row">
           <div class="left col-md-5">
-            <img src="./images/about2.jpg" alt="">
+            <img src="./images/about2.jpg" alt="" />
           </div>
           <div class="right col-md-7">
             <p class="para">17 Year of Experience</p>
             <h1>Making people look awesome since 2006</h1>
-            <p class="text">Come experience a unique and edgy barbershop for all your hair and beard needs. Vulputate ons amet ravida haretra nuam the drana miss uctus enec accumsan justo aliquam sit amet auctor orci done vitae risus duise nunc sapien.</p>
+            <p class="text">
+              Come experience a unique and edgy barbershop for all your hair and
+              beard needs. Vulputate ons amet ravida haretra nuam the drana miss
+              uctus enec accumsan justo aliquam sit amet auctor orci done vitae
+              risus duise nunc sapien.
+            </p>
             <div class="bottom d-flex">
-              <img src="./images/signature.svg">
+              <img src="./images/signature.svg" />
               <div class="sign">
-              <p class="top">Barber, Founder</p>
-              <p class="bot">Harold Brown</p>
+                <p class="top">Barber, Founder</p>
+                <p class="bot">Harold Brown</p>
               </div>
             </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section id="sec5">
+      <div class="container">
+        <div class="row top">
+          <div class="col-12 cont d-flex flex-column align-items-center">
+            <p>What we're offering</p>
+            <h1>Barber Services</h1>
+          </div>
+        </div>
+        <div class="row bottom">
+          <div class="c col-md-4 pb-4 position-relative">
+            <img class="w-100" src="./images/2.jpg" alt="" />
+            <div
+              class="con d-flex align-items-center flex-column position-absolute"
+            >
+              <i class="fa-solid fa-scissors fa-2xl"></i>
+              <h2>Hair Cut</h2>
+              <div class="line"></div>
+            </div>
+          </div>
+          <div class="a col-md-4 pb-4 position-relative">
+            <img class="w-100" src="./images/1.jpg" alt="" />
+            <div
+              class="con d-flex align-items-center flex-column position-absolute"
+            >
+              <i class="fa-solid fa-scissors fa-2xl"></i>
+              <h2>Beard Trim</h2>
+              <div class="line"></div>
+            </div>
+          </div>
+          <div class="b col-md-4 pb-4 position-relative">
+            <img class="w-100" src="./images/3.jpg" alt="" />
+            <div
+              class="con d-flex align-items-center flex-column position-absolute"
+            >
+              <i class="fa-solid fa-scissors fa-2xl"></i>
+              <h2>Hair Wash</h2>
+              <div class="line"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section id="sec6">
+      <div class="img">
+        <div class="container d-flex flex-column align-items-center">
+          <div class="star d-flex pb-3">
+            <i class="fa-solid fa-star" style="color: #ffd27d"></i>
+            <i class="fa-solid fa-star" style="color: #ffd27d"></i>
+            <i class="fa-solid fa-star" style="color: #ffd27d"></i>
+            <i class="fa-solid fa-star" style="color: #ffd27d"></i>
+            <i class="fa-solid fa-star" style="color: #ffd27d"></i>
+          </div>
+          <p class="lorem">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet,
+            reiciendis at debitis alias dolore vero omnis culpa commodi ex
+            repellendus quia maxime eos modi ab molestias, animi nostrum!
+            Laudantium, voluptatibusdofj Lorem ipsum dolor sit amet consectetur
+          </p>
+          <img src="./images/1 (1).jpg" alt="" />
+          <h6>ANDREAS BROWN</h6>
+          <p class="customer">Customer review</p>
+        </div>
+      </div>
+    </section>
+    <section id="sec7">
+      <div class="container d-flex flex-column align-items-center">
+        <div class="top row">
+          <div class="in col-12">
+            <h5 class="text-center">FIRS-CLASS</h5>
+            <h2 class="mb-5">Our Features</h2>
+          </div>
+        </div>
+        <div class="bottom row w-100">
+          <div class="d1 col-md-4 pb-4">
+            <div class="innerbox">
+            <img src="./images/barber.jpg" alt="" />
+            <h4>Groom's Shave</h4>
+            </div>
+          </div>
+          <div class="d2 col-md-4 pb-4">
+            <div class="innerbox">
+          <img src="./images/kids.jpg" alt="">
+          <h4>Kids Cuts</h4>
+          </div>
+          </div>
+          <div class="d3 col-md-4 pb-4">
+            <div class="innerbox">
+            <img src="./images/b3.jpg" alt="">
+            <h4>Creative Barbers</h4>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section id="sec8">
+      <div class="container">
+        <div class="top d-flex flex-column align-items-center">
+          <p>PRICING PLAN</p>
+          <h2>Barber Pricing</h2>
+        </div>
+        <div class="row">
+          <div class="col-md-6 left">
+            <div class="div1">
+            <div class="divO d-flex">
+              <p class="talk">Wash and Cut</p>
+              <p class="dots">.............................................................................</p>
+              <p class="price">$20</p>
+            </div>
+            <p class="lorem">Lorem nestibulum sceisue can varius the dis monte.</p>
+            </div>
+            <div class="div2">
+              <div class="divT d-flex">
+                <p class="talk">Head Shave with Razor</p>
+                <p class="dots">.............................................................</p>
+                <p class="price">$30</p>
+              </div>
+              <p class="lorem">Lorem nestibulum sceisue can varius the dis monte.</p>
+            </div>
+          </div>
+          <div class="col-md-6 right">
+
           </div>
         </div>
       </div>
@@ -135,3 +297,10 @@
     <script src="./index.js"></script>
   </body>
 </html>
+
+
+<!-- 
+بظبط الديف بتاع الاسعار ده لسه بشتغل فيه
+
+
+-->
