--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
             <nav class="d-none d-lg-flex">
               <a href="#sec1">HOME</a>
               <a href="#sec2">ABOUT</a>
-              <a href="">SERVICES</a>
-              <a href="">PRICING</a>
+              <a href="#sec5">SERVICES</a>
+              <a href="#sec8">PRICING</a>
               <a href="">PORTFOLIO</a>
               <a href="">TEAM</a>
               <a href="">BLOG</a>
@@ -244,20 +244,20 @@
         <div class="bottom row w-100">
           <div class="d1 col-md-4 pb-4">
             <div class="innerbox">
-            <img src="./images/barber.jpg" alt="" />
-            <h4>Groom's Shave</h4>
+              <img src="./images/barber.jpg" alt="" />
+              <h4>Groom's Shave</h4>
             </div>
           </div>
           <div class="d2 col-md-4 pb-4">
             <div class="innerbox">
-          <img src="./images/kids.jpg" alt="">
-          <h4>Kids Cuts</h4>
-          </div>
+              <img src="./images/kids.jpg" alt="" />
+              <h4>Kids Cuts</h4>
+            </div>
           </div>
           <div class="d3 col-md-4 pb-4">
             <div class="innerbox">
-            <img src="./images/b3.jpg" alt="">
-            <h4>Creative Barbers</h4>
+              <img src="./images/b3.jpg" alt="" />
+              <h4>Creative Barbers</h4>
             </div>
           </div>
         </div>
@@ -271,25 +271,106 @@
         </div>
         <div class="row">
           <div class="col-md-6 left">
-            <div class="div1">
-            <div class="divO d-flex">
-              <p class="talk">Wash and Cut</p>
-              <p class="dots">.............................................................................</p>
-              <p class="price">$20</p>
+            <div class="div1 pb-3">
+              <div class="divO d-flex align-items-center">
+                <p class="talk">Wash and Cut</p>
+                <p class="dots"></p>
+                <p class="price">$20</p>
+              </div>
+              <p class="lorem">
+                Lorem nestibulum sceisue can varius the dis monte.
+              </p>
             </div>
-            <p class="lorem">Lorem nestibulum sceisue can varius the dis monte.</p>
-            </div>
-            <div class="div2">
-              <div class="divT d-flex">
+            <div class="div2 pb-3">
+              <div class="divT d-flex align-items-center">
                 <p class="talk">Head Shave with Razor</p>
-                <p class="dots">.............................................................</p>
+                <p class="dots"></p>
                 <p class="price">$30</p>
               </div>
-              <p class="lorem">Lorem nestibulum sceisue can varius the dis monte.</p>
+              <p class="lorem">
+                Lorem nestibulum sceisue can varius the dis monte.
+              </p>
+            </div>
+            <div class="div3 pb-3">
+              <div class="divTh d-flex">
+                <p class="talk">Long Hair</p>
+                <p class="dots"></p>
+                <p class="price">$45</p>
+              </div>
+              <p class="lorem">
+                Lorem nestibulum sceisue can varius the dis monte.
+              </p>
+            </div>
+            <div class="div4 pb-3">
+              <div class="divF d-flex">
+                <p class="talk">Children Wash & Cut</p>
+                <p class="dots"></p>
+                <p class="price">$25</p>
+              </div>
+              <p class="lorem">
+                Lorem nestibulum sceisue can varius the dis monte.
+              </p>
             </div>
           </div>
           <div class="col-md-6 right">
-
+            <div class="div1 pb-3">
+              <div class="divO d-flex">
+                <p class="talk">Wash and Style</p>
+                <p class="dots"></p>
+                <p class="price">$10</p>
+              </div>
+              <p class="lorem">
+                Lorem nestibulum sceisue can varius the dis monte.
+              </p>
+            </div>
+            <div class="div2 pb-3">
+              <div class="divT d-flex">
+                <p class="talk">Short Beard Tidy</p>
+                <p class="dots"></p>
+                <p class="price">$15</p>
+              </div>
+              <p class="lorem">
+                Lorem nestibulum sceisue can varius the dis monte.
+              </p>
+            </div>
+            <div class="div3 pb-3">
+              <div class="divTh d-flex">
+                <p class="talk">Large beard trim</p>
+                <p class="dots"></p>
+                <p class="price">$25</p>
+              </div>
+              <p class="lorem">
+                Lorem nestibulum sceisue can varius the dis monte.
+              </p>
+            </div>
+            <div class="div4 pb-3">
+              <div class="divF d-flex">
+                <p class="talk">Luxury Full Service</p>
+                <p class="dots"></p>
+                <p class="price">$60</p>
+              </div>
+              <p class="lorem">
+                Lorem nestibulum sceisue can varius the dis monte.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section id="sec9">
+      <div class="img">
+        <div class="container d-flex flex-column justify-content-center align-items-center">
+          <h1 class="">Watch Our Barbershop Promo Video</h1>
+          <svg xmlns="http://www.w3.org/2000/svg" width="100px" height="100px" viewBox="0 0 256 256"><path d="M128 28a100 100 0 1 0 100 100A100.11 100.11 0 0 0 128 28m0 192a92 92 0 1 1 92-92a92.1 92.1 0 0 1-92 92m46.12-95.39l-64-40A4 4 0 0 0 104 88v80a4 4 0 0 0 2.06 3.5a4.06 4.06 0 0 0 1.94.5a4 4 0 0 0 2.12-.61l64-40a4 4 0 0 0 0-6.78M112 160.78V95.22L164.45 128Z"/></svg>
+        </div>
+      </div>
+    </section>
+    <section id="sec10">
+      <div class="container">
+        <div class="row">
+          <div class="col-12 d-flex flex-column align-items-center">
+            <p>Gallery</p>
+            <h2>Portfolio</h2>
           </div>
         </div>
       </div>
@@ -297,10 +378,3 @@
     <script src="./index.js"></script>
   </body>
 </html>
-
-
-<!-- 
-بظبط الديف بتاع الاسعار ده لسه بشتغل فيه
-
-
--->
