--- a/index.html
+++ b/index.html
@@ -370,7 +370,33 @@
         <div class="row">
           <div class="col-12 d-flex flex-column align-items-center">
             <p>Gallery</p>
-            <h2>Portfolio</h2>
+            <h2 class="pb-5">Portfolio</h2>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-4">
+          <img src="./images/p1.jpg" alt="" class="w-100 pb-4">
+          </div>
+          <div class="col-md-4">
+          <img src="./images/p2.jpg" alt="" class="w-100 pb-4">
+          </div>
+          <div class="col-md-4">
+          <img src="./images/p3.jpg" alt="" class="w-100 pb-4">
+          </div>
+          <div class="col-md-6">
+            <img src="./images/p4.jpg" alt="" class="w-100 pb-4">
+          </div>
+          <div class="col-md-6">
+            <img src="./images/p5.jpg" alt="" class="w-100 pb-4">
+          </div>
+          <div class="col-md-4">
+            <img src="./images/p6.jpg" alt="" class="w-100 pb-4">
+          </div>
+          <div class="col-md-4">
+            <img src="./images/p7.jpg" alt="" class="w-100 pb-4">
+          </div>
+          <div class="col-md-4">
+            <img src="./images/p8.jpg" alt="" class="w-100 pb-4">
           </div>
         </div>
       </div>
