--- a/index.html
+++ b/index.html
@@ -401,6 +401,37 @@
         </div>
       </div>
     </section>
+    <section id="sec11">
+      <div class="container">
+        <div class="top d-flex flex-column align-items-center pb-4">
+        <p>OUR BARBERS</p>
+        <h2>Hair Stylists</h2>
+        </div>
+        <div class="row">
+          <div class="left col-lg-4 col-md-6 col-sm-12 position-relative">
+            <img src="./images/t1.jpg" alt="" class="w-100">
+            <div class="pos position-absolute d-flex flex-column align-items-center">
+              <h3>Philip Brown</h3>
+              <p>Barber</p>
+            </div>
+          </div>
+          <div class="center col-lg-4 col-md-6 position-relative d-md-block d-none">
+            <img src="./images/t2.jpg" alt="" class="w-100">
+            <div class="pos position-absolute d-flex flex-column align-items-center">
+              <h3>Stephen Martin</h3>
+              <p>Stylist</p>
+            </div>
+          </div>
+          <div class="right col-lg-4 position-relative d-lg-block d-none">
+            <img src="./images/t3.jpg" alt="" class="w-100">
+            <div class="pos position-absolute d-flex flex-column align-items-center">
+              <h3>Dennis Dan</h3>
+              <p>Barber</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <script src="./index.js"></script>
   </body>
 </html>
