--- a/index.html
+++ b/index.html
@@ -432,6 +432,102 @@
         </div>
       </div>
     </section>
+    <section id="sec12">
+      <div class="container">
+        <div class="top d-flex flex-column align-items-center">
+        <p>OUR SERVICES</p>
+        <h2>We Also Offer</h2>
+        </div>
+        <div class="row g-4">
+          <div class="col-md-4 i1">
+            <div class="item">
+              <a class="d-flex flex-column justify-content-center align-items-center">
+              <img src="./images/barber.png" alt="" width="60px" class="mb-2">
+              <h2>Moustache Trim</h2>
+              <p>Lorem vulputate massa ons amet ravida haretra nuam the drana miss uctus enec accumsan aliquam sit sapien.</p>
+              </a>
+            </div>
+          </div>
+          <div class="col-md-4 i2">
+            <div class="item ">
+              <a class="d-flex flex-column justify-content-center align-items-center">
+              <img src="./images/shaving-brush.png" alt="" width="60px" class="mb-2">
+              <h2>Face Shave</h2>
+              <p>Lorem vulputate massa ons amet ravida haretra nuam the drana miss uctus enec accumsan aliquam sit sapien.</p>
+              </a>
+            </div>
+          </div>
+          <div class="col-md-4 i3">
+            <div class="item ">
+              <a class="d-flex flex-column justify-content-center align-items-center">
+              <img src="./images/hair-clipper.png" alt="" width="60px" class="mb-2">
+              <h2>Beard Trim</h2>
+              <p>Lorem vulputate massa ons amet ravida haretra nuam the drana miss uctus enec accumsan aliquam sit sapien.</p>
+              </a>
+            </div>
+          </div>
+          <div class="col-md-4 i4">
+            <div class="item">
+              <a class="d-flex flex-column justify-content-center align-items-center">
+              <img src="./images/barber-chair.png" alt="" width="60px" class="mb-2">
+              <h2>Haircut</h2>
+              <p>Lorem vulputate massa ons amet ravida haretra nuam the drana miss uctus enec accumsan aliquam sit sapien.</p>
+              </a>
+            </div>
+          </div>
+          <div class="col-md-4 i5">
+            <div class="item">
+              <a class="d-flex flex-column justify-content-center align-items-center">
+              <img src="./images/cut.png" alt="" width="60px" class="mb-2">
+              <h2>Clipper Cut</h2>
+              <p>Lorem vulputate massa ons amet ravida haretra nuam the drana miss uctus enec accumsan aliquam sit sapien.</p>
+              </a>
+            </div>
+          </div>
+          <div class="col-md-4 i6">
+            <div class="item">
+              <a class="d-flex flex-column justify-content-center align-items-center">
+              <img src="./images/liquid-soap.png" alt="" width="60px" class="mb-2">
+              <h2>Facial & Massage</h2>
+              <p>Lorem vulputate massa ons amet ravida haretra nuam the drana miss uctus enec accumsan aliquam sit sapien.</p>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section id="sec13">
+      <div class="container">
+        <div class="top d-flex flex-column align-items-center justify-content-center">
+          <p>Latest news</p>
+          <h2 class="mb-5">News & Blog</h2>
+        </div>
+        <div class="row bottom">
+          <div class="col-md-6 img1 position-relative">
+            <img src="./images/8888.jpg" alt="" class="w-100" >
+            <div class="date position-absolute">
+              <p>DEC</p>
+              <p class="num">29</p>
+            </div>
+            <div class="desc position-absolute">
+              <p>HAIR CARE</p>
+              <h2>Women's Hair Care Routine for Any Hait Type</h2>
+            </div>
+          </div>
+          <div class="col-md-6 img2 position-relative">
+            <img src="./images/999999.jpg" alt="" class="w-100">
+            <div class="date position-absolute">
+              <p>DEC</p>
+              <p class="num">27</p>
+            </div>
+            <div class="desc position-absolute">
+              <p>BEARD</p>
+              <h2>Common Mistakes That Damage Your Beard</h2>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section> 
     <script src="./index.js"></script>
   </body>
 </html>
